--- a/app/src/main/res/layout/activity_finished_game.xml
+++ b/app/src/main/res/layout/activity_finished_game.xml
@@ -72,7 +72,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button17"
+        android:id="@+id/finished_button_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
@@ -82,7 +82,7 @@
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button18"
+        android:id="@+id/finished_button_menu"
         android:layout_width="222dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
