--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -31,9 +31,9 @@
                 android:id="@+id/history_textView_games"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="2"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,10 +54,10 @@
                 android:id="@+id/history_textView_streak"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="2"
                 android:textAlignment="center"
                 android:textColor="@color/primary"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,10 +78,10 @@
                 android:id="@+id/history_textView_win"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="100%"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_green_light"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
     </LinearLayout>
