Completed History Read and Write to database. - History object can be saved and read from firestore - Saves information such as time and attempts taken. - Displays colours of history boards as well.
Completed Attempts counter and lose game function.
-Tracks attempts made
-Tracks letters correct now instead of words correct
- Game is set to lose on 20 attempts made

Reformatted many files and added helper functions for easier implementation with firestore.
-Changed HistoryItem to take firestore friendly values such as List.

Added intents to a few popups, still work in progress.
Cleaned up some code, work in progress.

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingBottom="32dp">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -32,9 +31,9 @@
                 android:id="@+id/history_textView_games"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text="0"
                 android:textAlignment="center"
-                android:textSize="36sp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -55,10 +54,10 @@
                 android:id="@+id/history_textView_streak"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text="0"
                 android:textAlignment="center"
                 android:textColor="@color/primary"
-                android:textSize="36sp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,10 +78,10 @@
                 android:id="@+id/history_textView_win"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="100%"
+                android:text="0"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_green_light"
-                android:textSize="36sp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -90,7 +89,11 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/history_viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fraggy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
