--- a/app/src/main/res/layout/activity_finished_game.xml
+++ b/app/src/main/res/layout/activity_finished_game.xml
@@ -15,7 +15,7 @@
         android:src="@android:drawable/btn_dialog" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/finished_textView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
@@ -29,7 +29,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/finished_textView_timeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -38,7 +38,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/finished_textView_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -53,7 +53,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/finished_textView_attemptsLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -62,7 +62,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/finished_textView_attempts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
