--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    android:orientation="vertical"
-    tools:context=".app.popup.SettingsPopup"
     android:background="@drawable/setting_background"
+    android:orientation="vertical"
     android:paddingBottom="16dp"
-    android:theme="@style/settings_pop_up_style">
+    android:theme="@style/settings_pop_up_style"
+    tools:context=".app.popup.SettingsPopup">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/settings_title"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Settings"
-        android:textSize="24sp" />
+        android:text="@string/settings"
+        android:textSize="24sp"
+        android:textColor="@color/white"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,42 +28,20 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/settings_text_view_volume"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="Music Volume"
-            android:textSize="16sp" />
+            android:text="@string/volume"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
 
         <SeekBar
-            android:id="@+id/seekBar_settings_music_volume"
+            android:id="@+id/seekBar_settings_volume"
             android:layout_width="119dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="5dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="Effects Volume"
-            android:textSize="16sp" />
-
-        <SeekBar
-            android:id="@+id/seekBar_settings_effects_volume"
-            android:layout_width="128dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -73,20 +52,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/settings_text_view_themes"
             android:layout_width="262dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Theme"
-            android:textSize="16sp" />
+            android:text="@string/themes"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinner_settings_theme"
             android:layout_width="372dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            tools:ignore="TouchTargetSizeCheck" />
+            tools:ignore="TouchTargetSizeCheck"
+            android:textColor="@color/teal_700"/>
 
     </LinearLayout>
 
@@ -96,6 +77,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:text="Confirm" />
+        android:text="@string/confirm"
+        android:backgroundTint="@color/primary"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
