--- a/app/src/main/res/values/sign_in_style.xml
+++ b/app/src/main/res/values/sign_in_style.xml
@@ -3,6 +3,6 @@
     <style name="AppThemeFirebaseAuth" parent="android:Theme.Light.NoTitleBar">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBar">true</item>
-        <item name="windowNoTitle">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 </resources>
