--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:paddingHorizontal="30dp"
         android:text="@string/play_daily_crossdle"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -44,7 +44,7 @@
         android:paddingHorizontal="18dp"
         android:text="@string/play_random_crossdle"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -61,7 +61,7 @@
         android:paddingHorizontal="60dp"
         android:text="@string/history"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         android:paddingHorizontal="57dp"
         android:text="@string/settings"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
