--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="32dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,9 +32,9 @@
                 android:id="@+id/history_textView_games"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="2"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,10 +55,10 @@
                 android:id="@+id/history_textView_streak"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="2"
                 android:textAlignment="center"
                 android:textColor="@color/primary"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,10 +79,10 @@
                 android:id="@+id/history_textView_win"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="100%"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_green_light"
-                android:textSize="20sp" />
+                android:textSize="36sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -89,11 +90,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/history_viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fraggy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
 </LinearLayout>
