--- a/app/src/main/res/values/pop_up_window_style.xml
+++ b/app/src/main/res/values/pop_up_window_style.xml
@@ -2,5 +2,7 @@
 <resources>
     <style name="settings_pop_up_style">
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
