--- a/app/src/main/res/layout/fragment_gamebar.xml
+++ b/app/src/main/res/layout/fragment_gamebar.xml
@@ -10,13 +10,12 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ImageView
-        android:id="@+id/gamebar_imageView_settings"
+        android:id="@+id/gamebar_imageView_back_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:contentDescription="@string/gamebar_help_settings"
-        android:src="@drawable/ic_baseline_settings_24"
-        app:tint="@color/primary" />
+        android:src="@drawable/ic_baseline_arrow_back_24"/>
 
     <TextView
         android:id="@+id/gamebar_imageView_title"
@@ -25,7 +24,7 @@
         android:layout_weight="1"
         android:text="@string/gamebar_heading_title"
         android:textAlignment="center"
-        android:textColor="@color/primary"
+        android:textColor="@color/white"
         android:textSize="32sp" />
 
     <ImageView
@@ -35,6 +34,7 @@
         android:layout_weight="1"
         android:contentDescription="@string/gamebar_help_info"
         android:src="@drawable/ic_baseline_info_24"
-        app:tint="@color/primary" />
+        app:tint="@color/white"
+        android:clickable="true"/>
 
 </LinearLayout>
